--- a/docs/team/dawo5010.adoc
+++ b/docs/team/dawo5010.adoc
@@ -65,7 +65,7 @@ Additionally, there are two common elements across all tabs. The command box, fo
 commands, and Leo, the mascot of treasurerPro, who acts as a personal assistant and guides the user.
 
 The following screenshot shows the User Interface of the application on first launch:
-image:Ui.png[width="600"]
+image:annotatedUi2.png[width="600"]
 
 == Summary of contributions
 I served as Team Lead for the project, and my responsibilities included designing the new User Interface, as well
