--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -421,15 +421,15 @@ You do not have to use your mouse in PalPay to switch tabs anymore.
 
 . By default, you are in the `transaction` tab.
 +
-image::view1.png[pdfwidth=70%, align="center"]
+image::view1.png[]
 +
 . Simply type *view budget* in the command box and press kbd:[Enter].
 +
-image::view2.png[pdfwidth=70%, align="center"]
+image::view2.png[]
 +
 . You can now view your budgets. Easy!
 +
-image::view3.png[pdfwidth=70%, align="center"]
+image::view3.png[]
 
 // end::view[]
 
@@ -658,15 +658,15 @@ ride instead. Without going through the trouble of updating the same transaction
 
 . Here, you can see the wrong update you just made.
 +
-image::undo1.png[pdfwidth=70%, align="center"]
+image::undo1.png[]
 +
 . Simply type *undo* in the command box and press kbd:[Enter].
 +
-image::undo2.png[pdfwidth=70%, align="center"]
+image::undo2.png[]
 +
 . As you wish, your command has been undone.
 +
-image::undo3.png[pdfwidth=70%, align="center"]
+image::undo3.png[]
 // end::undo[]
 
 [[Redo]]
