--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -290,7 +290,7 @@ from the last time they were analysed.
 
 ==== Initialization and Validation
 
-All data files of SecureIT are encrypted with a master password set by the user. The initialization and validation of the master password are handled by `*TestStorage*`.
+We encrypt all the data files of SecureIT with a master password set by the user. The initialization and validation of the master password are handled by `*TestStorage*`.
 
 The following diagram shows how the master password is initialized when the user uses the app for the first time and validated for subsequent uses of the app.
 
@@ -344,7 +344,7 @@ The solution to the first difference is a `*FileCommandParser*` class which is s
 
 image::FileCommandParserClassDiagram.png[]
 
-The second difference is addressed by the separation of access to the file system from the parser. For example, during encryption, at the parsing stage, an `*EncryptedFile toAdd*` is created without the knowledge of the actual file. Both the validation and encryption are carried out only at the execution stage. This is illustrated in the following sequence diagram:
+To address the second difference, we separate the access to the file system from the parser. For example, during encryption, at the parsing stage, an `*EncryptedFile toAdd*` is created without the knowledge of the actual file. Both the validation and encryption are carried out only at the execution stage. This is illustrated in the following sequence diagram:
 
 image::EncryptSequenceDiagram.png[]
 
@@ -362,7 +362,7 @@ Below is a summary of my considerations and analysis while developing the file m
 *Pros*: Interaction with the file system only occurs during execution. Easier to debug. +
 *Cons*: Need to construct `*EncryptedFile*` when file information is not yet available. Cannot initialise `*ModifiedAt*` in the constructor.
 +
-Alternative 2 is chosen because according to single responsibility principle, `*Parser*` should only convert user input to correct command format, without the knowledge of the file.
+We choose alternative 2 because according to single responsibility principle, `*Parser*` should only convert user input to correct command format, without the knowledge of files.
 
 . How to implement the file preview feature
 +
@@ -374,7 +374,7 @@ Alternative 2 is chosen because according to single responsibility principle, `*
 *Pros*: File system access is limited to command execution time only. +
 *Cons*: Need to pass the file content to the UI components via `*CommandResult*`.
 +
-Alternative 2 is chosen because it is better to keep all access to the file system in one place.
+We choose alternative 2 because it is better to keep all access to file system in one place.
 
 // end::fileencryption[]
 
