--- a/docs/team/evondong.adoc
+++ b/docs/team/evondong.adoc
@@ -138,7 +138,8 @@ https://github.com/AY1920S1-CS2103T-T13-3/main/pull/202[(PR #202)]
 
 * *Community*
 
-** Created issue labels for milestones v1.4 on Github
+** Created issue labels for milestones v1.4 on Github:
+https://github.com/AY1920S1-CS2103T-T13-3/main/issues/309[(Issue #309)]
 
 ** Reviewed pull requests and offered suggestions (with non-trivial review comments):
 https://github.com/AY1920S1-CS2103T-T13-3/main/pull/221[(PR #221)],
@@ -325,6 +326,8 @@ The following is a code snippet from `getCombination(char[] arr, int n)` method:
                         .toCollection(ArrayList::new));
     }
 
+.Code snippet of `getCombination(char[] arr, int n)` method from Cashier package
+
 The `getCombination(arr, arr.length)` method in the above snippet consists of 3 nested loops. The first loop decides the
 starting character. The second loop takes each of the characters on the right of the starting character as the ending character.
 The last loop appends all the characters from the starting character to the ending character. After iterating through the nested loops,
@@ -376,7 +379,7 @@ Else, if the amount inputted is valid and cashier has been set, the `ModelManage
 transaction of the sales made.
 
 [NOTE]
-After the execution of the above methods, a clear command will then be called to clear all the sales items on the tab.
+After the execution of the above methods, a clear command will then be called automatically to clear all the sales items on the tab.
 
 [NOTE]
 After checkout command is executed, boolean `onCashierMode` in ModelManager will be
